@@ -389,4 +389,121 @@ class DB_FMS_Test extends PHPUnit_Framework_TestCase
         $this->dbProxySetupForAuth();
         $this->assertTrue($this->db_proxy->dbClass->isExistRequiredTable(), $testName);
     }
+
+    public function testMultiClientSyncRegisterAndUnregister()
+    {
+        $testName = "Register and Unregister.";
+        $this->dbProxySetupForAuth();
+        //$this->db_proxy->dbClass->deleteForTest("registeredcontext");
+        //$this->db_proxy->dbClass->deleteForTest("registeredpks");
+        $clientId = "123456789ABCDEF";
+        $condition = "WHERE id=1001 ORDER BY xdate LIMIT 10";
+        $pkArray = array(1001, 2001, 3003, 4004);
+
+        $entity = "table1";
+        $registResult = $this->db_proxy->dbClass->register($clientId, $entity, $condition, $pkArray);
+        //var_export($this->db_proxy->logger->getDebugMessage());
+        $this->assertTrue($registResult !== false, "Register table1");
+        $recSet = $this->db_proxy->dbClass->queryForTest(
+            "registeredcontext",
+            array("clientid"=>$clientId, "entity"=>$entity));
+        $this->assertTrue(count($recSet) == 1, "Count table1");
+        $this->assertTrue($recSet[0]["conditions"] == $condition, "the 'clientId' value in table1");
+        $regId = $recSet[0]["id"];
+        $recSet = $this->db_proxy->dbClass->queryForTest(
+            "registeredpks",
+            array("context_id"=>$regId));
+        $this->assertTrue(count($recSet) == 4, "Count pk values");
+        $this->assertTrue(count(array_diff(
+                $pkArray,
+                array($recSet[0]["pk"], $recSet[1]["pk"], $recSet[2]["pk"], $recSet[3]["pk"])
+            )) == 0, "Stored pk values");
+
+        $entity = "table2";
+        $this->assertTrue($this->db_proxy->dbClass->register($clientId, $entity, $condition, $pkArray) !== false,
+            "Register table2");
+        $recSet = $this->db_proxy->dbClass->queryForTest(
+            "registeredcontext",
+            array("clientid"=>$clientId, "entity"=>$entity));
+        $this->assertTrue(count($recSet) == 1, "Count table1");
+        $this->assertTrue($recSet[0]["conditions"] == $condition, "tha 'clientId' value in table1");
+        $regId = $recSet[0]["id"];
+        $recSet = $this->db_proxy->dbClass->queryForTest(
+            "registeredpks",
+            array("context_id"=>$regId));
+        $this->assertTrue(count($recSet) == 4, "Count pk values");
+        $this->assertTrue(count(array_diff(
+                $pkArray,
+                array($recSet[0]["pk"], $recSet[1]["pk"], $recSet[2]["pk"], $recSet[3]["pk"])
+            )) == 0, "Stored pk values");
+
+        $entity = "table3";
+        $this->assertTrue($this->db_proxy->dbClass->register($clientId, $entity, $condition, $pkArray) !== false,
+            "Register table3");
+        $recSet = $this->db_proxy->dbClass->queryForTest(
+            "registeredcontext",
+            array("clientid"=>$clientId, "entity"=>$entity));
+        $this->assertTrue(count($recSet) == 1, "Count table1");
+        $this->assertTrue($recSet[0]["conditions"] == $condition, "tha 'clientId' value in table1");
+        $regId = $recSet[0]["id"];
+        $recSet = $this->db_proxy->dbClass->queryForTest(
+            "registeredpks",
+            array("context_id"=>$regId));
+        $this->assertTrue(count($recSet) == 4, "Count pk values");
+        $this->assertTrue(count(array_diff(
+                $pkArray,
+                array($recSet[0]["pk"], $recSet[1]["pk"], $recSet[2]["pk"], $recSet[3]["pk"])
+            )) == 0, "Stored pk values");
+
+        $this->assertTrue($this->db_proxy->dbClass->unregister($clientId, null), $testName);
+        $recSet = $this->db_proxy->dbClass->queryForTest("registeredcontext");
+        $this->assertTrue(count($recSet) == 0, "Count table1");
+        $recSet = $this->db_proxy->dbClass->queryForTest("registeredpks");
+        $this->assertTrue(count($recSet) == 0, "Count pk values");
+    }
+
+    public function testMultiClientSyncRegisterAndUnregisterPartial()
+    {
+        $testName = "Register and Unregister partically.";
+        $this->dbProxySetupForAuth();
+        //$this->db_proxy->dbClass->deleteForTest("registeredcontext");
+        //$this->db_proxy->dbClass->deleteForTest("registeredpks");
+        $clientId = "123456789ABCDEF";
+        $condition = "WHERE id=1001 ORDER BY xdate LIMIT 10";
+        $pkArray = array(1001, 2001, 3003, 4004);
+
+        $entity = "table1";
+        $registResult1 = $this->db_proxy->dbClass->register($clientId, $entity, $condition, $pkArray);
+        $registResult2 = $this->db_proxy->dbClass->register($clientId, $entity, $condition, $pkArray);
+        $registResult3 = $this->db_proxy->dbClass->register($clientId, $entity, $condition, $pkArray);
+        //var_export($this->db_proxy->logger->getDebugMessage());
+        $recSet = $this->db_proxy->dbClass->queryForTest(
+            "registeredcontext",
+            array("clientid"=>$clientId, "entity"=>$entity));
+        $this->assertTrue(count($recSet) == 3, "Count table1");
+        $recSet = $this->db_proxy->dbClass->queryForTest(
+            "registeredpks",
+            array("context_id"=>$registResult1));
+        $this->assertTrue(count($recSet) == 4, "Count pk values");
+        $this->assertTrue(count(array_diff(
+                $pkArray,
+                array($recSet[0]["pk"], $recSet[1]["pk"], $recSet[2]["pk"], $recSet[3]["pk"])
+            )) == 0, "Stored pk values");
+
+        $this->assertTrue($this->db_proxy->dbClass->unregister($clientId, array($registResult2)), $testName);
+        $recSet = $this->db_proxy->dbClass->queryForTest(
+            "registeredcontext",
+            array("clientid"=>$clientId, "entity"=>$entity));
+        $this->assertTrue(count($recSet) == 2, "Count table1");
+        $recSet = $this->db_proxy->dbClass->queryForTest(
+            "registeredpks",
+            array("context_id"=>$registResult2));
+        $this->assertTrue(count($recSet) == 0, "Count pk values");
+
+        $this->assertTrue($this->db_proxy->dbClass->unregister($clientId, null), $testName);
+        $recSet = $this->db_proxy->dbClass->queryForTest("registeredcontext");
+        $this->assertTrue(count($recSet) == 0, "Count table1");
+        $recSet = $this->db_proxy->dbClass->queryForTest("registeredpks");
+        $this->assertTrue(count($recSet) == 0, "Count pk values");
+    }
 }
