@@ -9,7 +9,8 @@ Change Log will be supplied by English only.
 Latest changes might exist on the GitHub repository. Please check https://github.com/msyk/INTER-Mediator.
 
 Ver.4.6 (in development)
-- Add errorMessageStore() and isExistRequiredTable() to DB_FileMaker_FX class.
+- Add errorMessageStore(), isExistRequiredTable(), register(), unregister() and queryForTest() to DB_FileMaker_FX 
+  class.
 - [BUG FIX] DB_FileMaker_FX used the alternative data source not only the 'issuedhash' table also 'authuer' and some
   tables for authorization/authentication. Now, it uses just the 'issuedhash' table for the alternative data source.
 - [BUG FIX] Calculation for strings didn't work, ex. >...
